unpackaged/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Acq_1_Year_Net_Director__c</fullName>
        <label>Acq 1 Year Net Director</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acq_1_Year_Net_Gov__c</fullName>
        <label>Acq 1 Year Net Gov</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acq_1_Year_Net_Mgr__c</fullName>
        <label>Acq 1 Year Net Mgr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acq_1_Year_Net_Rep__c</fullName>
        <label>Acq 1 Year Net Rep</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acq_1_Year_Pos__c</fullName>
        <label>Acq 1 Year Pos</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acq_2_Year_Net_Director__c</fullName>
        <label>Acq 2 Year Net Director</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acq_2_Year_Net_Gov__c</fullName>
        <label>Acq 2 Year Net Gov</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acq_2_Year_Net_Mgr__c</fullName>
        <label>Acq 2 Year Net Mgr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acq_2_Year_Net_Rep__c</fullName>
        <label>Acq 2 Year Net Rep</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acq_2_Year_Pos__c</fullName>
        <label>Acq 2 Year Pos</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B2B_Restricted_Level__c</fullName>
        <label>B2B Restricted Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billable_MOU_Peak_Minutes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable MOU (Peak Minutes)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Data_Plan__c</fullName>
        <label>Data Plan Maximum</label>
        <picklist>
            <picklistValues>
                <fullName>500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2048</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3072</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5120</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10240</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discountable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Discountable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Domestic_Add_On_MBB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domestic Add-On MBB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Domestic_MOU_All_minutes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domestic MOU (All minutes)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Domestic_Phone_First_MBB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domestic Phone First MBB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Domestic_SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domestic SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Domestic_WebConnect_MBB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domestic WebConnect MBB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Euro_Flat_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Euro Flat Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_FullName_Key__c</fullName>
        <externalId>true</externalId>
        <label>External FullName Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fixed_Overage_Value__c</fullName>
        <label>Fixed Overage Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fixed_Overage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fixed Overage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>International_Rate_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>International Rate Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intl_Long_Distance_MOU__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Intl Long Distance MOU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intl_Roaming_MBB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Intl Roaming MBB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intl_Roaming_MOU__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Intl Roaming MOU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <picklist>
            <picklistValues>
                <fullName>Android</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlackBerry</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Minimum_Price__c</fullName>
        <label>Minimum Price</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NationalGlobal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NationalGlobal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Discountable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non Discountable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OEM__c</fullName>
        <label>OEM</label>
        <picklist>
            <picklistValues>
                <fullName>Alcatel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Huawei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nokia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Samsung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB_COB Dell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB_COB HTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB_COB Huawei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB_COB LG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB_COB Nokia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB_COB RIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB_COB Samsung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB_COB ZTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZTE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overages_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overages Allowed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PreApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PreApproval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Broadband</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smartphone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone First</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Any Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rate_Plan_Type__c</fullName>
        <label>Rate Plan Type</label>
        <picklist>
            <picklistValues>
                <fullName>Voice Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Restricted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMB_Restricted_Level__c</fullName>
        <label>SMB Restricted Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SOC__c</fullName>
        <label>SOC</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Price__c</fullName>
        <label>Standard Price</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Pair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dozen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Each</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Upgrade_1_Year_Price__c</fullName>
        <label>Upgrade 1 Year Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Upgrade_2_year_price__c</fullName>
        <label>Upgrade 2 year price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>eCatalog__Ida_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Ida Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>eCatalog__Ida_Category__c</fullName>
        <label>Ida Category</label>
        <picklist>
            <picklistValues>
                <fullName>Category1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>eCatalog__Ida_Featured__c</fullName>
        <label>Ida Featured</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Featured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Super Featured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Sale</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>eCatalog__Ida_Filter__c</fullName>
        <label>Ida Filter</label>
        <picklist>
            <picklistValues>
                <fullName>Same Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Next Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under $50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$50 or More</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Filter1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Filter2</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>eCatalog__Ida_Include_Default_Tab__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If there is any data in custom catalog AND if this checkbox is checked, THEN the system displays the extra tabs from the default catalog.</description>
        <inlineHelpText>select this checkbox if you want include all the default tabs defined in the Ida catalog.</inlineHelpText>
        <label>Ida Include Default Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>eCatalog__Ida_Include_Default_Upgrade__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If there is any data in custom catalog AND if this checkbox is checked, THEN the system displays the upgrade info from the default catalog.</description>
        <inlineHelpText>select this checkbox if you want include all the default upgrades defined in the Ida catalog.</inlineHelpText>
        <label>Ida Include Default Upgrade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>eCatalog__Ida_Menu_Item__c</fullName>
        <label>Ida Menu Item</label>
        <picklist>
            <picklistValues>
                <fullName>submenu 101</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>submenu 102</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>submenu 103</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>submenu 201</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>submenu 202</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>submenu 301</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shop by Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shop By Style</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shop By Color</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under $25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$25 to $50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$50 to $100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over $100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shop by Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shop by Occasion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>What&apos;s New</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>eCatalog__Ida_Product_Image_Full_Size__c</fullName>
        <label>Ida Product Image Full Size</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>eCatalog__Ida_Product_Image_Thumbnail__c</fullName>
        <label>Ida Product Image Thumbnail</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>eCatalog__Ida_Product_Position__c</fullName>
        <label>Ida Product Position</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>eCatalog__Ida_Sample_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ida Sample Data</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <recordTypes>
        <fullName>Accessory</fullName>
        <active>true</active>
        <label>Accessory</label>
    </recordTypes>
    <recordTypes>
        <fullName>Enterprise_License</fullName>
        <active>true</active>
        <label>Enterprise License</label>
    </recordTypes>
    <recordTypes>
        <fullName>Feature</fullName>
        <active>true</active>
        <label>Feature</label>
    </recordTypes>
    <recordTypes>
        <fullName>ProductPackage</fullName>
        <active>true</active>
        <label>Rate</label>
    </recordTypes>
    <recordTypes>
        <fullName>ProductPackageComponent</fullName>
        <active>true</active>
        <label>Device</label>
    </recordTypes>
</CustomObject>